--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^11.73.0",
+    "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.27.1",
     "next": "^16.1.3",
     "react": "^18.3.1",
